[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Towers/AttackAoe.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 1024.0

[node name="AttackAoe" type="Node2D"]
script = ExtResource( 1 )

[node name="AttackTimer" type="Timer" parent="."]
autostart = true

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 1 )

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
